welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: identifier expected but '(' found.
def (vuBiscuit()){
    ^