welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code

var a: Boolean=false  

def (vuBiscuit()){
	if (!estSurBiscuit){
  	a=false
	}else{
  	a=true
}
}


def haveBaggle():Boolean = {
  avance(6)
  recule(6)
  if (vuBiscuit()==false){
  	droite()
    avance()
  	gauche()
    return false
  
  }else{
    
    return true
  
  }
  
}

